# libquicksqlite

./: .gitignore  CMakeLists.txt  LICENSE  library.h
cmake/: QuickSQLiteConfig.cmake.in
include/: quicksqlite.h
src/: Tools.cpp  Tools.h  quicksqlite.cpp
